lanecwe-Prod/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Enhancement Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed - Deployed</fullName>
        </values>
        <values>
            <fullName>Closed - Not Needed</fullName>
        </values>
        <values>
            <fullName>Customer UAT</fullName>
        </values>
        <values>
            <fullName>Delayed Release</fullName>
        </values>
        <values>
            <fullName>IT Re-work Needed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Manual Release - Prod</fullName>
        </values>
        <values>
            <fullName>Needs GC Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ready for Contract Team QC</fullName>
        </values>
        <values>
            <fullName>Ready for Demo</fullName>
        </values>
        <values>
            <fullName>Ready for IT QC</fullName>
        </values>
        <values>
            <fullName>Ready for Release</fullName>
        </values>
        <values>
            <fullName>Ready for Sales Ops QC</fullName>
        </values>
        <values>
            <fullName>Scoping</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Feature Requests</fullName>
        <description>For GCS SE to track their Feature Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Not Needed</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Customer UAT</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Pipeline</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SFDC Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Deployed</fullName>
        </values>
        <values>
            <fullName>Closed - Not Needed</fullName>
        </values>
        <values>
            <fullName>Customer UAT</fullName>
        </values>
        <values>
            <fullName>Delayed Release</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>IT Re-work Needed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Ready for Contract Team QC</fullName>
        </values>
        <values>
            <fullName>Ready for IT QC</fullName>
        </values>
        <values>
            <fullName>Ready for Release</fullName>
        </values>
        <values>
            <fullName>Ready for Sales Ops QC</fullName>
        </values>
        <values>
            <fullName>Scoping</fullName>
        </values>
        <values>
            <fullName>Under Consideration</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Scheduled Release</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Deployed</fullName>
        </values>
        <values>
            <fullName>Closed - Not Needed</fullName>
        </values>
        <values>
            <fullName>Customer UAT</fullName>
        </values>
        <values>
            <fullName>Delayed Release</fullName>
        </values>
        <values>
            <fullName>IT Re-work Needed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Manual Release - Prod</fullName>
        </values>
        <values>
            <fullName>Needs GC Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ready for Contract Team QC</fullName>
        </values>
        <values>
            <fullName>Ready for Demo</fullName>
        </values>
        <values>
            <fullName>Ready for IT QC</fullName>
        </values>
        <values>
            <fullName>Ready for Release</fullName>
        </values>
        <values>
            <fullName>Ready for Sales Ops QC</fullName>
        </values>
        <values>
            <fullName>Scoping</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <inlineHelpText>Please input acceptance criteria (what is needs to be in place to consider this request to be considered working?)</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_LOE__c</fullName>
        <label>Actual LOE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>x-Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Andy_Input_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Short-term field for paring down July Release</inlineHelpText>
        <label>Andy Input Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_End_Date__c</fullName>
        <label>P-BA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BA_Start_Date__c</fullName>
        <label>P-BA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Email__c</fullName>
        <inlineHelpText>Email of the Business Owner for the request.</inlineHelpText>
        <label>Business Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <inlineHelpText>Who in the business requested this enhancement?  Who we will go to for approval when completed.</inlineHelpText>
        <label>Business Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Requirements_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Requirements Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Requirements_Status__c</fullName>
        <inlineHelpText>Determines what the status of the business requirements needed is at</inlineHelpText>
        <label>Business Requirements Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Team_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM Team Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Assignment_Date_Time__c</fullName>
        <label>Case Assignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Completion_Percentage__c</fullName>
        <formula>IF(of_Completed_Developments__c = 0,
0,
of_Completed_Developments__c * 1.0 / of_Developments__c)</formula>
        <label>Case Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>IF ( D2subD1__c &gt; 0, 
TEXT(FLOOR( D2subD1__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ),8) - FLOOR( 
ROUND( 24 * ( D2subD1__c - FLOOR(D2subD1__c) ),8)) ),0)) &amp; &quot; mn &quot; 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Impacted_Org__c</fullName>
        <label>Case Impacted Org</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Notes_255__c</fullName>
        <inlineHelpText>Use this to track non-customer facing notes.</inlineHelpText>
        <label>Internal Case Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Notes_Empty__c</fullName>
        <formula>IF(ISBLANK(Case_Notes_255__c), true, false)</formula>
        <label>Case Notes Empty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner (Copy)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Owner_s_Region__c</fullName>
        <formula>IF(
         !   BEGINS(OwnerId, &quot;00G&quot;),
                  TEXT( Case_Owner_Copy__r.Region__c),
                       &quot;Queue Owned&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner&apos;s Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Date_Time__c</fullName>
        <label>Case Resolution Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Notes__c</fullName>
        <inlineHelpText>This is used to pass along customer notes via email and case resolution notes when closing a case.</inlineHelpText>
        <label>Customer Facing Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Time_Min__c</fullName>
        <formula>IF(IsClosed, (ClosedDate - CreatedDate), (NOW() - CreatedDate))*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution Time (Min)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Time__c</fullName>
        <formula>IF(IsClosed,  (ClosedDate - CreatedDate), (NOW() - CreatedDate))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution Time (Hrs)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Response_Time_Min__c</fullName>
        <formula>(Case_Assignment_Date_Time__c - CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Response Time (Min)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Response_Time__c</fullName>
        <formula>(Case_Assignment_Date_Time__c -  CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Response Time (Hrs)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Support_Type__c</fullName>
        <label>Case Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug/Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>IF(
Owner:Queue.Id = &quot;00G13000004Gmhq&quot; /* *SFDC Projects */, &quot;Project&quot;,
IF(
Emergency_Request__c = True &amp;&amp; Enhancement_Request__c = True, &quot;Emergency - Enhancement&quot;, 
IF(
Emergency_Request__c = True &amp;&amp;  Service_Support__c = True, &quot;Emergency - Support&quot;, 
IF(
Enhancement_Request__c = True &amp;&amp;  Owner:Queue.Id = &quot;00G30000002zgdH&quot; /* *SFDC Support* Enhancement Review */, &quot;Enhance - Sales Ops Review&quot;, 
IF(
Enhancement_Request__c = True &amp;&amp;  Owner:Queue.Id = &quot;00G30000002zgdM&quot; /* *SFDC Support* Ops Accepted Enhancements */, &quot;Enhance - CRM Team Review&quot;,
IF(
Enhancement_Request__c = True &amp;&amp;
OR(
Owner:User.Id = &quot;005a000000Ao61s&quot;,  /* Josh Goodling  */
Owner:User.Id = &quot;005a0000009lTTN&quot;,  /* Matt Santy */
Owner:User.Id = &quot;005300000060JMO&quot;,  /* Andrew Davidson  */
Owner:User.Id = &quot;005a000000ApZ4w&quot;,  /* Carmen Wong  */
Owner:User.Id = &quot;0051300000BALhj&quot;,  /* Prakash Srivastava  */
Owner:User.Id = &quot;005a0000009lhX4&quot;  /* Amit Madhoriya  */
), &quot;Enhance - Assigned&quot;, 
IF(
Service_Support__c = True &amp;&amp;  Owner:Queue.Id = &quot;00Ga0000003d8it&quot; /* *SFDC Support* Escalation Request */, &quot;Support - Unassigned&quot;,
IF(
Service_Support__c = True &amp;&amp;
OR(
Owner:User.Id = &quot;005a000000Ao61s&quot;,  /* Josh Goodling  */
Owner:User.Id = &quot;005a0000009lTTN&quot;,  /* Matt Santy */
Owner:User.Id = &quot;005300000060JMO&quot;,  /* Andrew Davidson  */
Owner:User.Id = &quot;005a000000ApZ4w&quot;,  /* Carmen Wong  */
Owner:User.Id = &quot;0051300000BALhj&quot;,  /* Prakash Srivastava  */
Owner:User.Id = &quot;005a0000009lhX4&quot;  /* Amit Madhoriya  */
), &quot;Support - Assigned&quot;, 
IF(
RecordType.Id = &quot;01230000001ElQa&quot;, &quot;Tier 1 Support&quot;, &quot;Unclassified&quot;
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Revenue__c</fullName>
        <inlineHelpText>What is the amount of Revenue received from the change order?</inlineHelpText>
        <label>x-Change Order Revenue</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;), TEXT( Case_Owner_Copy__r.Channel__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB Base</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>x-Client ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>x-Closed Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Converted to Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Development_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please fill out if there is a request that requires a custom code or development by a third party vendor.</inlineHelpText>
        <label>Code/Development Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committed_Deploy_Date__c</fullName>
        <inlineHelpText>Date that we commit to the Impacted Org to Deploy</inlineHelpText>
        <label>Committed Deploy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_awaiting_reply__c</fullName>
        <label>Customer awaiting reply</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2subD1__c</fullName>
        <formula>NOW()-Date_Time_Accepted_by_CRM_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2subD1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_Sign_URL__c</fullName>
        <label>x-DS_Sign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_Accepted_by_CRM_Team__c</fullName>
        <label>Date/Time Accepted by CRM Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE(MOD( Estimated_Resolution_Date__c - DATE(2000, 1, 1), 7), 0, &quot;Saturday&quot;,1,&quot;Sunday&quot;,2,&quot;Monday&quot;,3,&quot;Tuesday&quot;,4,&quot;Wednesday&quot;,5,&quot;Thursday&quot;,6,&quot;Friday&quot; ,&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week (Est. Res. Week)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Ready_for_Sales_Ops_QC__c</fullName>
        <formula>TODAY() - Ready_for_Sales_Ops_QC_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Ready for Sales Ops QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Type__c</fullName>
        <label>x-Demo Type</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet Now</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_Status__c</fullName>
        <label>x-Dev Status</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_Tier_Owner__c</fullName>
        <description>Set via WF rule when escalated to Dev Tier</description>
        <label>x-Dev Tier Owner</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_make_changes_to_SFDC__c</fullName>
        <description>Will make 2 other fields required if selected.</description>
        <label>Did you make changes to SFDC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_not_email_on_Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if you do not want the submitter of this case to receive an email when you close out the case</inlineHelpText>
        <label>Do not email on Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Request_Reason__c</fullName>
        <inlineHelpText>What is the Business Reason that justifies we stop/delay current work to focus on this case?  e.g. Revenue impacting, reduced SFDC functionality, broken SFDC functionality that prevents reps from doing jobs.</inlineHelpText>
        <label>Emergency Request Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only use this for something designed as somethign that cannot wait through the normal release cycle to be updated in SFDC.  For existing development only.</inlineHelpText>
        <label>Emergency Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhancement_Lifecycle__c</fullName>
        <label>Enhancement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Review Necessary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhancement Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Feedback__c</fullName>
        <label>x-Escalation Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Other_Details__c</fullName>
        <label>x-Escalation Details/Prime Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>x-Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Noc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hombre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalate to Q&amp;A (Amanda T)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Hours__c</fullName>
        <formula>CASE(
Estimated_Effort__c , 
&quot;Quick Reply (Open &amp; Close)&quot;, 0.05, 
&quot;Minimal&quot;, 0.33,
&quot;Low&quot;, 1.3,
&quot;Medium&quot;, 4.55,
&quot;High&quot;, 10,
&quot;Unknown&quot;, 15,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quick = .05; Minimal = .33, Low = 1.3, Medium = 4.55, High = 10, Unknown = 15</inlineHelpText>
        <label>Est. Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <inlineHelpText>Required once a case status is no longer New or Accepted or Scoping.  Please estimate once you think the work can be completed by.</inlineHelpText>
        <label>Est. Dev Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort__c</fullName>
        <inlineHelpText>Est. Level of Effort.  Minimal:  Less than 30 minutes; Low:  Less than 2 hours; Medium:  Less than 7 Hours; High:  Greater than 7 hours</inlineHelpText>
        <label>Estimated Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown (need to scope)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Reply (Open &amp; Close)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <inlineHelpText>For completion of Enhancement.  Please provide in increments of .5 only.  So 2.0 or .5 are fine but do not do 3.2 hrs.</inlineHelpText>
        <label>Estimated LOE</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Release_Date__c</fullName>
        <label>Estimated Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Release_Month__c</fullName>
        <description>updated name per DP request via MM</description>
        <label>Requested Release Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Resolution_Date__c</fullName>
        <label>Estimated Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <inlineHelpText>Date we expect to start work on the case.  Either from Development standpoint or scoping.</inlineHelpText>
        <label>Requested Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Approval_Status__c</fullName>
        <inlineHelpText>Set to Not Needed unless needs discussion at the Global Level</inlineHelpText>
        <label>Global Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Needed (1 Region Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Approved (1+ region declined)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Globally_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if an enhancement request that affects all regions has been globally approved.</inlineHelpText>
        <label>Globally Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Level_LOE__c</fullName>
        <label>High Level LOE</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Group__c</fullName>
        <inlineHelpText>ST-for Q/C Analysis</inlineHelpText>
        <label>Impacted Group</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Reps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Contract Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>